Fix-cover-alignment

--- a/css/style.css
+++ b/css/style.css
@@ -33,10 +33,10 @@
 .about-me {
     transition: background 0.25s cubic-bezier(0.25, 0.46, 0.45, 0.94);
     display: block;
-    position: relative;
+    position: absolute;
     width: 100%;
     height: 100%;
-    background: black;
+    background-color: black;
     background: -webkit-linear-gradient(left, black , #3a3535); /* For Safari 5.1 to 6.0 */
     background: -o-linear-gradient(right, black, #3a3535); /* For Opera 11.1 to 12.0 */
     background: -moz-linear-gradient(right, black, #3a3535); /* For Firefox 3.6 to 15 */
